# ml-template

./: .gitignore  Dockerfile  MLProject  Makefile  README.md  deploy.sh  dvc.yaml  hp_tuning_results.md  hp_tunning_results.md  params.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: build.yml  cd.yml  ci.yml  cml.yml  deploy.yml  hp_tuning.yml  train.yml
api/: main.py
config/: best_param.json  hp_config.json  hyperparameters.json  python_env.yaml
dvc_plots/: index.html
metrics/: .gitignore
processed_dataset/: .gitignore
scripts/: dvc_pipeline.sh  show_plots.sh  tf_init.sh  upload_datasets.sh
src/: feature_engineer.py  metrics_and_plots.py  preprocess.py  test.py  train.py  tuning.py  tunning.py  utils.py
terraform/: .terraform.lock.hcl  main.tf  variables.tf
terraform/lambda/: main.tf  policy.tf  variables.tf
terraform/s3/: main.tf  outputs.tf  variables.tf
tests/: test.py
