[tool.poetry]
name = "mlflow-template"
version = "0.1.0"
description = "template"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mlflow = "^2.10.2"
ruff = "^0.2.1"
pytest = "^8.0.1"
awscli = "^1.32.44"
boto3 = "^1.34.44"
botocore = "^1.34.44"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pytest-cov = "^4.1.0"
pydantic = "^2.6.1"
scikit-learn = "^1.4.1.post1"
polars = "^0.20.9"
matplotlib = "^3.8.3"
pandas = "^2.2.0"
fairlearn = "^0.10.0"
numpy = "^1.26.4"
prefect = "^2.15.0"
python-dotenv = "^1.0.1"
mangum = "^0.17.0"
dvc = "^3.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
# 2. Avoid enforcing line-length violations (`E501`)
#ignore = ["E501"]
extend-safe-fixes = ["F541"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
line-ending = "auto"